--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="monetag" content="7ee692184f0047f339bf11620bc270ba">
     <title>الرئيسية</title>
     <style>
         body {
